fix: use npm install instead of npm ci to allow lock file drift

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
 
   "buildCommand": "prisma generate && next build",
 
-  "installCommand": "npm ci",
+  "installCommand": "npm install",
 
   "regions": ["iad1"],
 
